# RepoRangerTest

./: README.md  config.json  start.sh  stop.sh
RepoRanger/: CMakeLists.txt  build.bat  build.sh  configparser.cpp  configparser.h  main.cpp  managerConfig.json  repohandler.cpp  repohandler.h
Tester/: start.sh
Tester/Test/: managerConfig.json  package-lock.json  package.json
Tester/src/: main.cpp
src/: CMakeLists.txt  main.cpp
